Added dockerfile, commented code, author

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -2,3 +2,7 @@ version: 1.2
 workflows:
   - subclass: WDL
     primaryDescriptorPath: /bwaMem_pipeline.wdl
+
+  authors:
+    - name: Garrett Lam
+      email: glam@broadinstitute.org
